Add functionality to get default media device from user preferences.

The motivation for this is that constraint algorithms for getUserMedia
and related functions need this information.
The existing mechanism to get the default device (requesting permission)
is insufficient as some algorithms, such as device selection, need this
information before requesting permission.

The WebContentsDelegate::GetDefaultMediaDeviceID is used in follow-up CL https://codereview.chromium.org/2629383002/.

BUG=623104
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2629383002
Cr-Commit-Position: refs/heads/master@{#445692}

Former-commit-id: 52a3de796ac586a2ab7d6123663b01415e34966f